# perf-opt

CRYPT-GRP3/: .gitignore  CMakeLists.txt  CRYPT算子实现优化 第三组.pptx  README.md  param.h  tda4-a72-linux.md
CRYPT-GRP3/aes/: Record.md  build.sh  运行.md
CRYPT-GRP3/aes/aes_interface/: aes.cpp  aes_interface.cpp  gmult.cpp  param.h
CRYPT-GRP3/md5/: MD5_README.md  md5_ablation.sh  md5_baseline.sh  md5_optimized.sh
CRYPT-GRP3/md5/md5_ablation/: md5.cpp  md5_interface.h
CRYPT-GRP3/md5/md5_baseline/: md5.cpp  md5_linux_adapter.cpp
CRYPT-GRP3/md5/md5_optimized/: md5.cpp  md5.h  md5_interface.cpp  md5_main.cpp
CRYPT-GRP3/md5/md5_test/: md5_linux.c  md5_linux.h  md5_linux_test.c  timestamp.c  timestamp.h
CRYPT-GRP3/sha256/: sha256_baseline.sh  sha256_optimized.sh  sha256优化.docx  计组体优化结果数据.docx
CRYPT-GRP3/sha256/sha256_baseline/: CMakeLists.txt
CRYPT-GRP3/sha256/sha256_baseline/sha256/: sha256_interface.cpp  sha256_interface.h  timestamp.h
CRYPT-GRP3/sha256/sha256_optimized/: CMakeLists.txt  param.h
CRYPT-GRP3/sha256/sha256_optimized/sha256/: sha256.cpp  sha256_interface.cpp  sha256_main.cpp  timestamp.cpp
FFT-GRP1/: FFT优化研讨报告.doc
FFT-GRP1/daima/baseline_fixed/: fft_a.c
FFT-GRP1/daima/opt_contiguous_twiddle/: README.md  fft_a.c  fft_a.h.before_contiguous_twiddle  fft_contiguous  main.c
FFT-GRP1/daima/opt_float_twiddle/: call_test.c  fft_a.c  fft_a.h  fft_baseline  fft_float_twiddle  main.c
FFT-GRP1/daima/opt_sincos_twiddle/: fft_a.c  fft_sincos
FFT-GRP1/perf-opt/crypt/: param.h  tda4-a72-linux.md
FFT_GRP2/: FFT性能优化实验ppt.pptx  README.md  timestamp.c  timestamp.h
FFT_GRP2/ref/: fft_linux_ref.c  fft_linux_ref.h  fft_linux_test_ref.c  test_aligned.c  test_lookup.c  test_neon.c  test_original.c  test_unrolled.c
FFT_GRP2/stepwise/: fft_linux_stepwise.c  fft_linux_stepwise.h  fft_linux_test_stepwise.c
KF_GRP3(hjj)/: README.md  V2-KF-GRP3.pptx  kf_linux.c  kf_linux.h  kf_linux_test.c  timestamp.c  timestamp.h
crypt/: CMakeLists.txt
crypt/aes/: aes.cpp  aes.h  aes_interface.cpp  gmult.h
crypt/md5/: md5.cpp  md5.h  md5_main.cpp
crypt/sha256/: sha256.cpp  sha256.h  sha256_interface.cpp  sha256_main.cpp
fft/: main.c
kf/: kalman_op_A72.c
mpc/: main.c  mpc.c  mpc_linux.c
mpc/MPC-GRP3/: README.md  mpc_linux.h  mpc_linux_test.c  timestamp.c  timestamp.h  研讨ppt.pptx
(+31 files in other folders)
